--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,12 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    androidTestCompile 'com.jayway.android.robotium:robotium-solo:4.3.1'
-
+    androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.5.3'
+    androidTestCompile 'com.android.support.test:runner:0.4.1'
+    androidTestCompile 'com.android.support.test:rules:0.4.1'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
+    // Set this dependency if you want to use Hamcrest matching
+    androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
 
     //Support Libraries
     compile 'com.android.support:design:23.1.1'
@@ -81,7 +85,7 @@ dependencies {
     }
     //Reactive Java
     compile 'io.reactivex:rxandroid:1.0.1'
-    compile 'io.reactivex:rxjava:1.0.14'
+    compile 'io.reactivex:rxjava:1.0.17'
     //Retrofit
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
@@ -91,4 +95,8 @@ dependencies {
     compile 'com.wdullaer:swipeactionadapter:1.3.2'
     compile 'me.dm7.barcodescanner:zxing:1.8.3'
     compile 'org.altbeacon:android-beacon-library:2.5.1'
+
+    //Parse
+    compile 'com.parse.bolts:bolts-android:1.3.0'
+    compile 'com.parse:parse-android:1.11.0'
 }
